[gd_scene load_steps=11 format=3 uid="uid://c81hhlnc2biry"]

[ext_resource type="Texture2D" uid="uid://b78jfdn8wkfoe" path="res://Textures/healt.png" id="1_8g7wg"]
[ext_resource type="Script" path="res://Scripts/UI.gd" id="1_d1rig"]
[ext_resource type="FontFile" uid="uid://cbelx22tg42qn" path="res://Textures/pixel-emulator-font/PixelEmulator-xq08.ttf" id="2_jbohx"]
[ext_resource type="Texture2D" uid="uid://bjsl44n2vh3tf" path="res://Textures/pumpkin head.svg" id="4_jtcgc"]
[ext_resource type="Texture2D" uid="uid://bxvqvanpf681y" path="res://Textures/Sprite-0001.svg" id="5_h6fdp"]
[ext_resource type="Texture2D" uid="uid://cjpoebm8sc6q3" path="res://Textures/bullet_shadow.svg" id="6_eqnnr"]
[ext_resource type="Texture2D" uid="uid://cd2777vlbeglv" path="res://Textures/bullet.svg" id="7_aueuo"]

[sub_resource type="Theme" id="Theme_dh6ms"]
default_font = ExtResource("2_jbohx")

[sub_resource type="LabelSettings" id="LabelSettings_p0rub"]
font = ExtResource("2_jbohx")
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_bl1u5"]
font_size = 36

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_d1rig")

[node name="Control" type="Control" parent="."]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_dh6ms")

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
custom_minimum_size = Vector2(450, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -112.0
offset_right = 200.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="Container" type="Control" parent="Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="Control/HBoxContainer/VBoxContainer/Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 5

[node name="TextureRect" type="TextureRect" parent="Control/HBoxContainer/VBoxContainer/Container/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1_8g7wg")
expand_mode = 4

[node name="TextureRect2" type="TextureRect" parent="Control/HBoxContainer/VBoxContainer/Container/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1_8g7wg")

[node name="TextureRect3" type="TextureRect" parent="Control/HBoxContainer/VBoxContainer/Container/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1_8g7wg")

[node name="TextureRect4" type="TextureRect" parent="Control/HBoxContainer/VBoxContainer/Container/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1_8g7wg")

[node name="TextureRect5" type="TextureRect" parent="Control/HBoxContainer/VBoxContainer/Container/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1_8g7wg")

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Control/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="Control/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.235294, 0.235294, 0.235294, 1)

[node name="MarginContainer" type="MarginContainer" parent="Control/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Control/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/ColorRect/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Control/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/ColorRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_jtcgc")
stretch_mode = 5

[node name="KillsLabel" type="Label" parent="Control/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/ColorRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = SubResource("LabelSettings_p0rub")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ColorRect2" type="ColorRect" parent="Control/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.235294, 0.235294, 0.235294, 1)

[node name="MarginContainer" type="MarginContainer" parent="Control/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/ColorRect2/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Control/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/ColorRect2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("5_h6fdp")
stretch_mode = 5

[node name="FertilizerLabel" type="Label" parent="Control/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/ColorRect2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "0"
label_settings = SubResource("LabelSettings_bl1u5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect3" type="ColorRect" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.235294, 0.235294, 0.235294, 1)

[node name="Ammo" type="TextureProgressBar" parent="Control/HBoxContainer/ColorRect3"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 6.0
offset_right = 44.0
grow_vertical = 2
max_value = 15.0
value = 14.0
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("6_eqnnr")
texture_progress = ExtResource("7_aueuo")
